--- a/blocks/header/__lang-zone/header__lang-zone.css
+++ b/blocks/header/__lang-zone/header__lang-zone.css
@@ -3,4 +3,12 @@
   padding: 0;
   display: flex;
   list-style: none;
+  padding-bottom: 6px;
+  padding-top: 18px;
 }
+
+@media screen and (max-width: 425px) {
+  .header__lang-zone {
+    padding-bottom: 8px; 
+  }
+}  
