--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,35 +3,31 @@
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
   padding-top: 28px;
   padding-right: 48px;
   padding-left: 48px;
   padding-bottom: 56px;
-  position: relative; 
-  box-sizing: border-box;
+  position: relative;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
   .header {
-    max-width: 928px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .header {
-    max-width: 720px;
-    padding-right: 24px;
-    padding-left: 24px;
     padding-bottom: 48px;
   }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 1023px) {
+  .header {
+    padding-right: 24px;
+    padding-left: 24px;
+  }
+}
+
+@media screen and (max-width: 767px) {
   .header {
     padding-top: 16px;
     padding-right: 16px;
     padding-left: 16px;
-    padding-bottom: 0;
   }
-}
+} 
