--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -7,11 +7,10 @@
   line-height: 36px;
   text-align: center;
   color: #FFFFFF;
-
   padding-bottom: 64px;
 }
 
-@media (min-width: 426px) and (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
   .lead__subtitle {
     padding-bottom: 56px;
   }
