--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,5 +1,5 @@
 .lead {
-   max-width: 1280px;
+   /* max-width: 1280px; */
    margin: 0 auto;
    display: flex;
    flex-direction: column;
@@ -12,29 +12,28 @@
    padding-bottom: 92px;
 }
 
-@media (min-width: 769px) and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
    .lead {
-      padding-top: 0;
       padding-right: 48px;
       padding-left: 48px;
-      padding-bottom: 92px;
+   }
+ }
+
+ @media screen and (max-width: 1023px) {
+   .lead {
+      padding-right: 0px;
+      padding-left: 0px;
    }
 }
 
-@media (min-width: 426px) and (max-width: 768px) {
+ @media screen and (max-width: 767px) {
    .lead {
-      padding-top: 0;
-      padding-right: 0px;
-      padding-left: 0px;
       padding-bottom: 88px;
    }
-}
+ }   
 
 @media screen and (max-width: 425px) {
    .lead {
-      padding-top: 48px;
-      padding-right: 0;
-      padding-left: 0;
       padding-bottom: 64px;
    }
 }
