--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -2,27 +2,25 @@
   margin: 0;
   font-weight: 400;
   font-size: 18px;
-  padding-bottom: 24px;
+  padding-bottom: 26px;
 }
 
 .place__paragraph:last-of-type {
   padding-bottom: 0;
 }
 
-@media (min-width: 426px) and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .place__paragraph {
     font-size: 16px;
     padding-bottom: 25px;
   }
-}
+} 
 
 @media screen and (max-width: 425px) {
   .place__paragraph {
-    font-size: 16px;
     padding-top: 0;
     padding-right: 16px;
     padding-left: 16px;
-    padding-bottom: 25px;
   }
 }
 
