--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -8,14 +8,14 @@
   font-style: normal;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .place__paragraphs {
     font-size: 16px;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 425px) {
   .place__paragraphs {
-    font-size: 16px;
+    padding-top: 32px;
   }
 }
