--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -7,18 +7,10 @@
   line-height: 76px;
 }
 
-@media screen and (min-width: 601px) and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .place__title {
     font-size: 42px;
     line-height: 46px;
-  }
-}
-
-@media screen and (min-width: 426px) and (max-width: 600px) {
-  .place__title {
-    font-size: 32px;
-    line-height: 32px;
-    padding-bottom: 32px;
   }
 }
 
