--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -10,7 +10,7 @@
   padding-bottom: 12px;
 } 
 
-@media (min-width: 426px) and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .place__url-heading {
     line-height: 12px;
   }   
