--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -8,27 +8,24 @@
   padding-bottom: 92px;
 }
 
-@media (min-width: 769px) and (max-width: 1024px) {
+@media screen and (max-width: 1279px) {
   .places {
-    padding-top: 0;
     padding-right: 48px;
     padding-left: 48px;
-    padding-bottom: 90px;
   }
 }
 
-@media (min-width: 426px) and (max-width: 768px) {
+@media screen and (max-width: 1023px) {
   .places {
-    padding-top: 0;
     padding-right: 24px;
     padding-left: 24px;
     padding-bottom: 90px;
   }
-}
+}  
 
 @media screen and (max-width: 425px) {
   .places {
     padding: 0;
-    margin-bottom: 66px;
+    padding-bottom: 66px;
   }
 }
